docs:  Add some pre textual content
Missing two images in implementation and the abstract

--- a/agrad.tex
+++ b/agrad.tex
@@ -1,1 +1,7 @@
-Agradeço primeiramente a Deus por sua graça e luz em minha vida, aos meus pais Adelmo e Aparecida e a minha irmã Laura por todo o apoio, amor e compreensão, à minha namorada Mirla por estar sempre ao meu lado frente a todas as dificuldades, aos meus queridos amigos Paulo, Felipe, Samuel e Matheus, e ao meu orientador Prof. Gilson.
+Agradeço aos meus pais, por todo apoio e incentivo durante toda essa jornada. Ao meu irmão, Davi, e meu grande amigo Rafael, pelo apoio e conselhos.
+
+À Bárbara, pelo apoio, conselhos e paciência e por estar sempre ao meu lado.
+
+Agradeço ao meu orientador, Prof. Gilson, por todos os conselhos. Aos professores do DES que de alguma forma contribuíram com a minha formação profissional e pessoal.
+
+E, por fim, agradeço a aqueles que compartilharam seus conhecimentos e amizade durante essa jornada.
