--- a/integracao.tex
+++ b/integracao.tex
@@ -7,7 +7,7 @@ Cada equipamento apresentado nesse trabalho desempenha um papel importante no co
 
 \section{Controlador semafórico}
 
-A integração dos sistemas se dá através do equipamento chamado controlador semafórico. O controlador semafórico é um sistema que tem como função a supervisão e o controle do trânsito, sendo composto por hardware e software capazes de prover uma rede semafórica inteligente e automatizada.
+A integração dos sistemas se dá através do equipamento chamado controlador semafórico. O controlador semafórico é um sistema que tem como função a supervisão e o controle do trânsito, sendo composto por \textit{hardware} e \textit{software} capazes de prover uma rede semafórica inteligente e automatizada.
 
 \begin{figure}[ht]
     \begin{center}
