--- a/intro.tex
+++ b/intro.tex
@@ -20,7 +20,7 @@ Uma grande quantidade de veículos em circulação pode facilmente sobrecarregar
 Pesquisas realizadas no começo do ano de 2018 mostraram que, em horários de pico, o trânsito nas principais capitais brasileiras pode resultar em tempos de viagens até 77\% mais demorados que o usual, %[http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/]
 isso é uma consequência da quantidade de veículos nas ruas. Além disso, existem pesquisas relacionando o trânsito como um gerador de estresse na população, principalmente nos em condutores veiculares, e o estresse como uma das principais causas das agressividades no trânsito.  %[https://www.researchgate.net/profile/Vinicius_Ferreira3/publication/237480019_Comportamentos_no_transito_e_causas_da_agressividade/links/02e7e528bc018b2f72000000/Comportamentos-no-transito-e-causas-da-agressividade.pdf] [https://singep.org.br/6singep/resultado/406.pdf] [http://www2.fm.usp.br/gdc/docs/iof_89_estressetrans.pdf].
 
-Com o intuito de reduzir riscos e aumentar a organização das vias, é utilizada a sinalização de trânsito. A sinalização de trânsito é o elemento de ligação entre o técnico, o usuário da via, motoristas e pedestres e os agentes de fiscalização.Seu objetivo principal é o de garantir a utilização adequada da via, no sentido da segurança e fluidez do tráfego como um todo. Para atingir este objetivo, é necessário que a sinalização contenha uma mensagem clara e inconfundível e que seja plenamente visível. Desse modo, iniciou-se a padronização dos elementos responsáveis por realizar a sinalização, em cores, formatos, dimensões e critérios de utilização. %[http://www.cetsp.com.br/media/391986/msuvol01_introducaorev01.pdf]. 
+Com o intuito de reduzir riscos e aumentar a organização das vias, é utilizada a sinalização de trânsito. A sinalização de trânsito é o elemento de ligação entre o técnico, o usuário da via, motoristas e pedestres e os agentes de fiscalização. Seu objetivo principal é o de garantir a utilização adequada da via, no sentido da segurança e fluidez do tráfego como um todo. Para atingir este objetivo, é necessário que a sinalização contenha uma mensagem clara e inconfundível e que seja plenamente visível. Desse modo, iniciou-se a padronização dos elementos responsáveis por realizar a sinalização, em cores, formatos, dimensões e critérios de utilização. %[http://www.cetsp.com.br/media/391986/msuvol01_introducaorev01.pdf]. 
 O foco deste trabalho é a sinalização semafórica das vias urbanas.
 
 \begin{figure}[ht]
@@ -47,10 +47,11 @@ Ao final dessa apresentação, serão propostas possíveis melhorias a serem imp
 
 \section{Estrutura do trabalho}
 
-Esse trabalho é composto por 4 capítulos, sendo este o primeiro, e os 3 restantes são descritos, brevemente, a seguir:
+Esse trabalho é composto por 5 capítulos, sendo este o primeiro, e os 4 restantes são descritos, brevemente, a seguir:
 
 \begin{itemize}
     \item Capítulo 2 - Nesse capítulo são descritas as tecnologias e fundamentações teóricas das soluções propostas
     \item Capítulo 3 - Nesse capítulo são descritos os detalhes dos sistemas implementados
-    \item Capítulo 4 - Nesse capítulo é apresentado um relato das experiências adquiridas e objetivos alcançados
+    \item Capítulo 4 - Nesse capítulo é descrita a integração entre os sistemas apresentados
+    \item Capítulo 5 - Nesse capítulo é apresentado um relato das experiências adquiridas e objetivos alcançados
 \end{itemize}
