--- a/main.tex
+++ b/main.tex
@@ -135,8 +135,8 @@
 %  Ouro nativo, que, na ganga impura,\\
 %  A bruta mina entre os cascalhos vela.
 %  \end{epigraph}
-\begin{epigraph}{Abraham Lincoln}
-Não sou obrigado a vencer, mas tenho o dever de ser verdadeiro. Não sou obrigado a ter sucesso, mas tenho o dever de corresponder à luz que tenho.
+\begin{epigraph}{Barack Obama}
+A mudança não virá se esperarmos por outra pessoa ou outros tempos. Nós somos aqueles por quem estávamos esperando. Nós somos a mudança que procuramos.
 \end{epigraph}
 
 % Resumo em Português
